# aws-serverless-api-using-cdk-in-go

./: README.md
cdk/: cdk.go  go.mod
hello-world/: Cargo.toml
hello-world/src/: main.rs
