[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.13.0"
http = "1.0.0"
lambda_runtime = "0.9.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.35.1"
